# mqtt-typed-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  check_result.txt
.github/dev-docs/: LAUNCH.md  PLAN-0.2.0-api-compat.md  PLAN-ci-emqx.md  PLAN-engine-readme-doctests.md  PLAN-engine-standalone-polish.md  PLAN-serializer-tests-dedup.md  PLAN-session-a-prepublish-hygiene.md  PLAN-session-b-readme-polish.md  PLAN-session-c-release.md  PLAN-transport-reexport.md  TODO-0.2.0-release.md  TODO-done.md  TODO-legacy.md  TODO.md
.github/workflows/: ci.yml  release.yml  release.yml.disabled  simple-example.yml
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: client.rs  connection.rs  lib.rs  message_meta.rs  message_serializer.rs  routing.rs  topic.rs
core/src/client/: async_client.rs  config.rs  connection_options.rs  error.rs  last_will.rs  publisher.rs  subscriber.rs  subscription_builder.rs
core/src/routing/: error.rs  subscriber.rs  subscription_manager.rs
core/src/structured/: subscriber.rs
core/src/topic/: cache_strategy.rs  error.rs  topic_match.rs  topic_matcher.rs  topic_matcher_tests.rs  topic_pattern_item_tests.rs  topic_pattern_path.rs  topic_pattern_path_tests.rs  topic_router.rs
dev/: README.md  docker-compose.yml
dev/certs/: ca.pem  cert.pem  key.pem
doc-macros/: CHANGELOG.md  Cargo.toml  README.md
doc-macros/src/: lib.rs  transform.rs
docs/: COMPARISON_WITH_RUMQTTC.md  FUTURE_WORK_RESEARCH.md  PLAN_0.3.md  PLAN_0.3_CONNSTATE.md  PLAN_0.3_DELEAK.md  ROADMAP.md  TODO.md  topic-error-system.md
docs/research/: CLIENT_LIBRARY_LANDSCAPE_2026.md  MQTT5_CRATE_EVALUATION_2026.md
examples/: .env  .env.example  000_hello_world.rs  001_ping_pong.rs  002_configuration.rs  003_hello_world_lwt.rs  004_hello_world_tls.rs  005_hello_world_serializers.rs  006_retain_and_clear.rs  007_custom_patterns.rs  008_modular_example.rs  009_message_metadata.rs  010_basic_usage.rs  010_connection_state.rs  010_hello_universum.rs  100_all_serializers_demo.rs  102_multi_serializer_macro.rs  Cargo.toml  README.md  advanced_config.rs  advanced_example.rs  basic_macro.rs  basic_usage.rs  demo_all_methods.rs  main_example.rs  modular_example_runner.rs  prepare_for_macro.rs  prepare_for_macro_publisher.rs  structured_macro.rs  test_custom_patterns.rs  test_pattern_validation.rs  test_publisher_with_pattern.rs
examples/internal/: 010_basic_usage.rs  010_hello_universum.rs  011_multy_sensor_system.rs  101_multi_serializer_manual.rs  advanced_config.rs  advanced_example.rs  basic_usage.rs  demo_all_methods.rs  full_test.rs  main_example.rs  structured_macro.rs  test_publisher_with_pattern.rs
examples/modular_example/: runner.rs  topics.rs
examples/shared/: config.rs  tracing.rs
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/examples/: another.rs  basic_macro.rs  full_test.rs  typed_client_demo.rs  with_client.rs
macros/src/: analysis.rs  analysis_test.rs  codegen.rs  codegen_test.rs  codegen_typed_client.rs  lib.rs  lib_test.rs  naming.rs
macros/tests/: test_macro.rs  typed_client_integration.rs
mqtt-topic-engine/: CHANGELOG.md  Cargo.toml  README.md
mqtt-topic-engine/src/: cache_strategy.rs  error.rs  lib.rs  qos.rs  topic_match.rs  topic_matcher.rs  topic_pattern_item.rs  topic_pattern_path.rs  topic_pattern_path_tests.rs  topic_router.rs
scripts/: dev-helpers.sh
src/: client.rs  connection.rs  lib.rs  main.rs  message_serializer.rs  routing.rs  test_macro.rs  topic.rs
src/client/: async_client.rs  config.rs  error.rs  publisher.rs  publisher_builder.rs  subscriber.rs  subscription_builder.rs
src/routing/: error.rs  subscriber.rs  subscription_manager.rs
src/structured/: mod.rs  subscriber.rs
src/topic/: error.rs  topic_match.rs  topic_matcher.rs  topic_matcher_tests.rs  topic_pattern_path.rs  topic_router.rs
tests/: serializer_macro_integration.rs  serializers_integration.rs
