[workspace]
members = ["core", "macros"]
resolver = "2"

[package]
name = "mqtt-typed-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
description = "Type-safe MQTT client with procedural macros for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "async", "client", "typed", "macros"]
categories = ["network-programming", "asynchronous"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

[dependencies]
mqtt-typed-client-core = { path = "./core", version = "0.1.0" }

mqtt-typed-client-macros = { path = "./macros", version = "0.1.0", optional = true }

[features]
default = ["macros", "bincode", "json"]
macros = ["mqtt-typed-client-macros"]
bincode = ["mqtt-typed-client-core/bincode-serializer"]
json = ["mqtt-typed-client-core/json"]
messagepack = ["mqtt-typed-client-core/messagepack"]
cbor = ["mqtt-typed-client-core/cbor"]
postcard = ["mqtt-typed-client-core/postcard"]
protobuf = ["mqtt-typed-client-core/protobuf"]
ron = ["mqtt-typed-client-core/ron"]
flexbuffers = ["mqtt-typed-client-core/flexbuffers"]


[dev-dependencies]
bincode = "2.0.1"
dotenv = "0.15.0"
rand = "0.9.1"
rumqttc = "0.24.0"
rustls-pemfile = "2.1.0"
serde = "1.0.219"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
rmp-serde = "1.3"
chrono = { version = "0.4.41", features = ["serde"] }

[[example]]
name = "100_all_serializers_demo"
required-features = ["bincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]

[[test]]
name = "serializers_integration"
required-features = ["bincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]
