[workspace]
members = ["core", "macros", "mqtt-topic-engine"]
resolver = "2"

# Shared dependency versions for all workspace members. Members opt in with
# `rumqttc = { workspace = true, features = [...] }` and add their own features.
[workspace.dependencies]
rumqttc = { version = "0.25.1", default-features = false }

[package]
name = "mqtt-typed-client"
version = "0.2.0"
edition = "2021"
rust-version = "1.85.1"
description = "Type-safe async MQTT client with automatic topic routing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
homepage = "https://github.com/holovskyi/mqtt-typed-client"
documentation = "https://docs.rs/mqtt-typed-client"
keywords = ["mqtt", "iot", "async", "typed", "client"]
categories = ["network-programming", "asynchronous"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

# The root crate lives at the repo root, so `cargo package` would otherwise sweep
# in CI configs, internal planning docs, dev certs (incl. a private key!), scratch
# examples, and other repo-only files. Keep the published crate to source + public
# examples + docs. Member crates (core/macros/engine) live in subdirs
# and need no exclude.
# NOTE: `docs/COMPARISON_WITH_RUMQTTC.md` is `include_str!`-embedded as the
# `comparison` module doc (src/lib.rs), so it MUST ship — exclude only the
# internal docs (e.g. ROADMAP) rather than all of `docs/`.
exclude = [
	".github/",
	".cargo/",
	"dev/",
	"docs/ROADMAP.md",
	"scripts/",
	"examples/internal/",
	"check_result.txt",
	".enable-ai-filesystem",
	".gitattributes",
	"deny.toml",
	"rust-toolchain.toml",
	"rustfmt.toml",
]

# docs.rs builds with all features. The root crate does not depend on paho-mqtt
# (which links a native C library), so all-features is safe here.
[package.metadata.docs.rs]
all-features = true

[dependencies]
mqtt-typed-client-core = { path = "./core", version = "0.2.0" }

mqtt-typed-client-macros = { path = "./macros", version = "0.2.0", optional = true }

rumqttc = { workspace = true }

[features]
default = ["macros", "bincode", "json", "rumqttc-url", "rumqttc-use-rustls"]
macros = ["mqtt-typed-client-macros"]
bincode = ["mqtt-typed-client-core/bincode-serializer"]
json = ["mqtt-typed-client-core/json"]
messagepack = ["mqtt-typed-client-core/messagepack"]
cbor = ["mqtt-typed-client-core/cbor"]
postcard = ["mqtt-typed-client-core/postcard"]
protobuf = ["mqtt-typed-client-core/protobuf"]
ron = ["mqtt-typed-client-core/ron"]
flexbuffers = ["mqtt-typed-client-core/flexbuffers"]

rumqttc-url = ["rumqttc/url"]
rumqttc-websocket = ["rumqttc/websocket"]
rumqttc-use-rustls = ["rumqttc/use-rustls"]
# rustls without bundling a crypto provider (e.g. aws-lc-rs). Use this to bring
# your own provider (such as ring) and avoid the aws-lc cross-compilation pain.
rumqttc-use-rustls-no-provider = ["rumqttc/use-rustls-no-provider"]
rumqttc-use-native-tls = ["rumqttc/use-native-tls"]
rumqttc-proxy = ["rumqttc/proxy"]


[dev-dependencies]
bincode = "2.0.1"
dotenv = "0.15.0"
rand = "0.9.1"
rumqttc = { workspace = true, features = ["url", "use-rustls"] }
rustls-pemfile = "2.1.0"
serde = "1.0.219"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
rmp-serde = "1.3"
chrono = { version = "0.4.41", features = ["serde"] }

[[example]]
name = "004_hello_world_tls"
required-features = ["rumqttc-use-rustls"]

[[example]]
name = "100_all_serializers_demo"
required-features = ["bincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]

[[test]]
name = "serializers_integration"
required-features = ["bincode", "json", "messagepack", "cbor", "postcard", "ron", "flexbuffers", "protobuf"]

[[test]]
name = "serializer_macro_integration"
required-features = ["macros", "bincode", "json"]


