[package]
name = "mqtt-typed-client-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
description = "A typed MQTT client library with pattern-based routing and automatic subscription management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "async", "typed", "client", "iot"]
categories = ["network-programming", "asynchronous"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

[features]
default = ["bincode-serializer", "json"]
bincode-serializer = ["dep:bincode"]
json = ["dep:serde_json"]
messagepack = ["dep:rmp-serde"]
cbor = ["dep:ciborium"]
postcard = ["dep:postcard"]
protobuf = ["dep:prost"]
ron = ["dep:ron"]
flexbuffers = ["dep:flexbuffers"]


[dependencies]
arcstr = "1.2"
bincode = { version = "2.0", optional = true }
bytes = "1.10"
futures = "0.3"
lru = "0.15"
rumqttc = { version = "0.24", features = ["url"] }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
postcard = { version = "1.0", optional = true, features = ["alloc"] }
prost = { version = "0.12", optional = true }
ron = { version = "0.8", optional = true }
flexbuffers = { version = "2.0", optional = true }


[dev-dependencies]
mqtt-typed-client-macros = { path = "../macros" }
serde_json = "1.0.140"
# Dependencies for examples and tests
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[lib]
