[package]
name = "mqtt-typed-client-core"
version = "0.3.0"
edition = "2021"
rust-version = "1.85.1"
description = "Type-safe async MQTT client core with automatic topic routing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "iot", "async", "typed", "client"]
categories = ["network-programming", "asynchronous"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

# docs.rs builds with all features. core does not depend on paho-mqtt, so this is safe.
[package.metadata.docs.rs]
all-features = true

[features]
default = ["bincode-serializer", "json"]
# Transport capability features: forward to the backend, never change public
# type shapes (see docs/research/DUAL_PROTOCOL_API_DESIGN_2026.md).
websocket = ["rumqttc/websocket"]
tls-rustls = ["rumqttc/use-rustls"]
tls-rustls-no-provider = ["rumqttc/use-rustls-no-provider"]
tls-native = ["rumqttc/use-native-tls"]
proxy = ["rumqttc/proxy"]
# SEMVER-EXEMPT escape hatch: raw backend options access (backend_tweak).
unstable-backend-api = []
bincode-serializer = ["dep:bincode"]
json = ["dep:serde_json"]
messagepack = ["dep:rmp-serde"]
cbor = ["dep:ciborium"]
postcard = ["dep:postcard"]
protobuf = ["dep:prost"]
ron = ["dep:ron"]
flexbuffers = ["dep:flexbuffers"]


[dependencies]
arcstr = "1.2"
bincode = { version = "2.0", optional = true }
bytes = "1.10"
futures = "0.3"
lru = "0.15"
rumqttc = { workspace = true }
url = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
tracing = "0.1"
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
postcard = { version = "1.0", optional = true, features = ["alloc"] }
prost = { version = "0.12", optional = true }
ron = { version = "0.8", optional = true }
flexbuffers = { version = "2.0", optional = true }
mqtt-topic-engine = { path = "../mqtt-topic-engine", version = "0.1.2", features = ["rumqttc"] }


# Dev-only: used by tests to exercise the `mqtt_topic` macro against core types.
# Path-only (NO version) on purpose — `macros` depends on `core`, so a versioned
# dev-dep would form an unpublishable cycle (core would require macros 0.3.0,
# which is only published AFTER core). Cargo strips path-only dev-deps from the
# published manifest, so core publishes without needing macros in the index.
[dev-dependencies]
mqtt-typed-client-macros = { path = "../macros" }
serde_json = "1.0.140"
# Dependencies for examples and tests
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
