[package]
name = "mqtt-typed-client-doc-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
description = "Internal documentation macros for mqtt-typed-client (not for direct use)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "documentation", "internal"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
regex = "1.0"
