[package]
name = "mqtt-typed-client-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for the mqtt_typed_client library"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.103"
mqtt-typed-client-core = { path = "../core" }

[dev-dependencies]
tokio = "1.45.1"
mqtt-typed-client-core = { path = "../core" }

