[package]
name = "mqtt-topic-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

description = "High-performance MQTT topic pattern matching and routing engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/holovskyi/mqtt-typed-client"
keywords = ["mqtt", "topic", "pattern", "matching", "routing"]
categories = ["network-programming", "parser-implementations"]
authors = ["Artem Holovskyi <artem.holovskyi@gmail.com>"]
readme = "README.md"

[dependencies]
arcstr = "1.2"
smallvec = "1.15"
lru = { version = "0.15", optional = true }
thiserror = "2.0"
rumqttc = { version = "0.25", optional = true, default-features = false }
paho-mqtt = { version = "0.13", optional = true, default-features = false }
ntex-mqtt = { version = "5", optional = true, default-features = false }
tracing = "0.1"

[features]
default = ["router", "lru-cache"]
router = []
lru-cache = ["dep:lru"]
rumqttc = ["dep:rumqttc"]
paho-mqtt = ["dep:paho-mqtt"]
ntex-mqtt = ["dep:ntex-mqtt"]

[dev-dependencies]